Fix: list msgs - side align

--- a/mailtemplate/base/tickets-style.css
+++ b/mailtemplate/base/tickets-style.css
@@ -85,9 +85,8 @@
   position: relative;
   margin: auto;
   margin-top: 30px;
-  margin-left: 5px;
-  margin-right: 5px;
   max-width: 500px;
+  min-width: 320px;
   list-style: none;
 }
 
@@ -101,7 +100,7 @@
   margin-top: 5px;
 }
 
-.box-message-more-info{
+.box-message-more-info {
   margin-top: 15px;
   padding-top: 15px;
   font-size: 13px;
@@ -166,6 +165,8 @@
 
 .list-messages {
   padding: 0px;
+  padding-left: 5px;
+  padding-right: 5px;
   max-width: 540px;
 }
 
@@ -205,11 +206,12 @@
 }
 
 .list-last-messages {
-  display: table;
+  display: flex;
+  flex-direction: column;
 }
 
 .list-last-messages li {
-  max-width: 460px;
+  width: 100%;
 }
 
 .float-left {
